[package]
name = "simple_wal"
version = "0.5.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
license = "MIT"
description = "A simple write-ahead-logging crate."
documentation = "https://docs.rs/simple_wal"
repository = "https://github.com/benaubin/simple_wal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.2.1"
thiserror = "1.0"
rand = "0.7.3"
tokio = { version = "1.0.2", features = ["io-util", "fs"] }
async-trait = "0.1.42"
futures = "0.3.12"
pin-project = "1.0.4"
